--- a/AlphaVantage/main.ipynb
+++ b/AlphaVantage/main.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "\n",
+    "API_KEY = open('api_key.txt', 'r').read().strip()"
    ]
   },
   {
@@ -16,14 +18,14 @@
    "outputs": [],
    "source": [
     "\n",
-    "url = 'https://www.alphavantage.co/query?function=INCOME_STATEMENT&symbol=IBM&apikey=WME4VXPO6GE4ECXQ'\n",
+    "url = 'https://www.alphavantage.co/query?function=INCOME_STATEMENT&symbol=IBM&apikey={}'.format(API_KEY)\n",
     "r = requests.get(url)\n",
     "data = r.json()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
