Added csv files

--- a/AlphaVantage/main.ipynb
+++ b/AlphaVantage/main.ipynb
@@ -61,15 +61,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30.69\n"
+      "3.35\n"
      ]
     }
    ],
    "source": [
-    "url = 'https://www.alphavantage.co/query?function=EARNINGS&symbol=GOOG&apikey={API_KEY}'\n",
+    "url = 'https://www.alphavantage.co/query?function=EARNINGS&symbol=IBM&apikey=demo'\n",
     "r = requests.get(url)\n",
     "data = r.json()\n",
     "print(data['quarterlyEarnings'][0]['reportedEPS'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Meta Data', 'Time Series (Daily)'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol=IBM&outputsize=full&apikey=demo'\n",
+    "r = requests.get(url)\n",
+    "data = r.json()\n",
+    "print(data.keys())"
    ]
   },
   {
