quick ratio rectified

--- a/data/compile.ipynb
+++ b/data/compile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'deferredRevenue', 'shortTermDebt', 'depreciationAndAmortization', 'retainedEarnings', 'inventory', 'goodwill', 'netIncomeFromContinuingOperations', 'cashAndShortTermInvestments', 'longTermDebt', 'otherCurrentLiabilities', 'nonInterestIncome', 'totalNonCurrentAssets', 'accumulatedDepreciationAmortizationPPE', 'otherNonOperatingIncome', 'capitalLeaseObligations', 'investmentIncomeNet', 'ebitda', 'totalLiabilities', 'currentLongTermDebt', 'totalNonCurrentLiabilities', 'intangibleAssetsExcludingGoodwill', 'treasuryStock', 'currentNetReceivables', 'researchAndDevelopment', 'fiscalDateEnding', 'commonStock', 'costOfRevenue', 'incomeTaxExpense', 'currentAccountsPayable', 'interestAndDebtExpense', 'comprehensiveIncomeNetOfTax', 'shortTermInvestments', 'totalCurrentLiabilities', 'otherNonCurrrentAssets', 'operatingExpenses', 'totalAssets', 'operatingIncome', 'cashAndCashEquivalentsAtCarryingValue', 'currentDebt', 'longTermDebtNoncurrent', 'totalShareholderEquity', 'grossProfit', 'ebit', 'totalRevenue', 'interestExpense', 'commonStockSharesOutstanding', 'interestIncome', 'totalCurrentAssets', 'netInterestIncome', 'intangibleAssets', 'costofGoodsAndServicesSold', 'netIncome', 'longTermInvestments', 'otherNonCurrentLiabilities', 'investments', 'incomeBeforeTax', 'reportedCurrency', 'shortLongTermDebtTotal', 'depreciation', 'propertyPlantEquipment', 'sellingGeneralAndAdministrative', 'otherCurrentAssets'}\n"
+      "{'incomeBeforeTax', 'totalShareholderEquity', 'grossProfit', 'treasuryStock', 'shortLongTermDebtTotal', 'costofGoodsAndServicesSold', 'intangibleAssets', 'ebitda', 'interestIncome', 'goodwill', 'propertyPlantEquipment', 'retainedEarnings', 'netIncomeFromContinuingOperations', 'shortTermInvestments', 'netIncome', 'ebit', 'operatingExpenses', 'totalNonCurrentAssets', 'costOfRevenue', 'totalAssets', 'cashAndShortTermInvestments', 'otherNonOperatingIncome', 'cashAndCashEquivalentsAtCarryingValue', 'totalCurrentLiabilities', 'researchAndDevelopment', 'longTermDebt', 'netInterestIncome', 'interestAndDebtExpense', 'comprehensiveIncomeNetOfTax', 'deferredRevenue', 'otherCurrentLiabilities', 'currentDebt', 'interestExpense', 'shortTermDebt', 'longTermInvestments', 'totalRevenue', 'reportedCurrency', 'fiscalDateEnding', 'currentLongTermDebt', 'commonStockSharesOutstanding', 'operatingIncome', 'currentAccountsPayable', 'incomeTaxExpense', 'depreciationAndAmortization', 'totalCurrentAssets', 'totalLiabilities', 'otherCurrentAssets', 'longTermDebtNoncurrent', 'investments', 'sellingGeneralAndAdministrative', 'investmentIncomeNet', 'nonInterestIncome', 'accumulatedDepreciationAmortizationPPE', 'currentNetReceivables', 'capitalLeaseObligations', 'totalNonCurrentLiabilities', 'commonStock', 'intangibleAssetsExcludingGoodwill', 'otherNonCurrentLiabilities', 'inventory', 'depreciation', 'otherNonCurrrentAssets'}\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
     "    ['roe', ['netincome'], ['totalShareHolderEquity']],\n",
     "    ['roa', ['netincome'], ['totalAssets']],\n",
     "    ['current_ratio', ['totalCurrentAssets'], ['totalCurrentLiabilities']],\n",
-    "    ['quick_ratio', ['cashandshortterminvestments', 'accountsreceivable'], ['totalcurrentliabilities']],\n",
+    "    ['quick_ratio', ['totalcurrentassets', '-inventory'], ['totalcurrentliabilities']],\n",
     "    ['asset_turnover', ['totalrevenue'], ['totalAssets']],\n",
     "    ['debt_ratio', ['totalliabilities'], ['totalassets']],\n",
     "]"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,14 +145,21 @@
     "                    \n",
     "                try:\n",
     "                    for nums in ratio[1]:\n",
-    "                        num += float(info[i][indicatos_ind[nums.lower()]])\n",
+    "                        if (nums.lower())[0] == '-':\n",
+    "                            num -= float(info[i][indicatos_ind[(nums.lower())[1:]]])\n",
+    "                        else:\n",
+    "                            num += float(info[i][indicatos_ind[nums.lower()]])\n",
     "                    for dens in ratio[2]:\n",
-    "                        den += float(info[i][indicatos_ind[dens.lower()]])\n",
+    "                        if (dens.lower())[0] == '-':\n",
+    "                            den -= float(info[i][indicatos_ind[(dens.lower())[1:]]])\n",
+    "                        else:\n",
+    "                            den += float(info[i][indicatos_ind[dens.lower()]])\n",
     "                    to_write.append(str(num/den))\n",
     "                    pass\n",
     "                except:\n",
-    "                    if num != 0 and den != 0:\n",
-    "                        print(num, den)\n",
+    "                    if num != 0:\n",
+    "                        # print(num, den)\n",
+    "                        pass\n",
     "                    to_write.append('#####')\n",
     "                    pass\n",
     "            \n",
