--- a/data/compile.ipynb
+++ b/data/compile.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,17 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "ratios = [\n",
-    "    ['pe', [], []], \n",
-    "    ['eps', [], []],\n",
+    "    # ['pe', [], []], \n",
+    "    # ['eps', [], []],\n",
     "    ['de', ['totalLiabilities'], ['totalShareHolderEquity']], \n",
     "    ['da', ['totalLiabilities'], ['totalAssets']],\n",
     "    ['roe', ['netincome'], ['totalShareHolderEquity']],\n",
     "    ['roa', ['netincome'], ['totalAssets']],\n",
+    "    ['net_profit_margin', ['netincome'], ['totalrevenue']],\n",
     "    ['current_ratio', ['totalCurrentAssets'], ['totalCurrentLiabilities']],\n",
     "    ['quick_ratio', ['totalcurrentassets', '-inventory'], ['totalcurrentliabilities']],\n",
     "    ['asset_turnover', ['totalrevenue'], ['totalAssets']],\n",
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,10 +169,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180\n",
+      "177\n",
+      "192\n",
+      "221\n",
+      "192\n",
+      "192\n",
+      "201\n",
+      "228\n",
+      "202\n",
+      "203\n",
+      "207\n",
+      "223\n",
+      "201\n",
+      "202\n",
+      "205\n",
+      "216\n",
+      "185\n",
+      "181\n",
+      "190\n",
+      "206\n",
+      "{'MMM', 'ABT', 'AMZN', 'AWK', 'AOS', 'ALK', 'ATVI', 'ADP', 'AME', 'ACN', 'ABMD'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "tickerset = set(ticker)\n",
+    "for year in range(2017, 2022):\n",
+    "    for qtr in range(1, 5):\n",
+    "        period = f'{year}_Q{qtr}'\n",
+    "        period_file = open(f'../data/QuarterlyRatios/{period}.csv', 'r')\n",
+    "        lines = period_file.readlines()\n",
+    "        cool = 0\n",
+    "        for line in lines:\n",
+    "            ok = True\n",
+    "            line = line.strip().split(',')\n",
+    "            for word in line:\n",
+    "                if word == '#####':\n",
+    "                    ok = False\n",
+    "                    break\n",
+    "            if not ok:\n",
+    "                if tickerset.__contains__(line[0]):\n",
+    "                    tickerset.remove(line[0])\n",
+    "            else: \n",
+    "                cool += 1\n",
+    "        print(cool)\n",
+    "print(tickerset)"
+   ]
   },
   {
    "cell_type": "code",
