Correction in compilation script

--- a/AlphaVantage/create_csv.ipynb
+++ b/AlphaVantage/create_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,20 +77,20 @@
     "            year = year - 1\n",
     "        else:\n",
     "            quarter = (month - 1) // 3\n",
-    "    filename = f'{year}_Q{quarter}.csv'\n",
+    "    filename = f'{year}_Q{quarter}'\n",
     "    return filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 505/505 [00:01<00:00, 401.69it/s]\n"
+      "100%|██████████| 505/505 [00:01<00:00, 338.79it/s]\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     "            continue\n",
     "        dates = [d['fiscalDateEnding'] for d in quarter_data]\n",
     "        for date in dates:\n",
-    "            filename = os.path.join(write_dir, get_filename(date))\n",
+    "            filename = os.path.join(write_dir, get_filename(date)+'.csv')\n",
     "            if os.path.exists(filename):\n",
     "                continue\n",
     "            else:\n",
@@ -120,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 505/505 [00:05<00:00, 91.18it/s] \n"
+      "100%|██████████| 505/505 [00:03<00:00, 138.85it/s]\n"
      ]
     }
    ],
@@ -144,12 +144,13 @@
     "        except:\n",
     "            continue\n",
     "        for d in quarter_data:\n",
-    "            if d['fiscalDateEnding'] not in data_dict:\n",
-    "                data_dict[d['fiscalDateEnding']] = d\n",
+    "            q_date = get_filename(d['fiscalDateEnding'])\n",
+    "            if q_date not in data_dict:\n",
+    "                data_dict[q_date] = d\n",
     "            else:\n",
-    "                data_dict[d['fiscalDateEnding']].update(d)\n",
-    "    for date, q_data in data_dict.items():\n",
-    "        filename = os.path.join(write_dir, get_filename(date))\n",
+    "                data_dict[q_date].update(d)\n",
+    "    for q_date, q_data in data_dict.items():\n",
+    "        filename = os.path.join(write_dir, q_date+'.csv')\n",
     "        if os.path.exists(filename):\n",
     "            fw = open(filename, 'a')\n",
     "            l = []\n",
