added clean ratio data

--- a/data/compile.ipynb
+++ b/data/compile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'incomeBeforeTax', 'totalShareholderEquity', 'grossProfit', 'treasuryStock', 'shortLongTermDebtTotal', 'costofGoodsAndServicesSold', 'intangibleAssets', 'ebitda', 'interestIncome', 'goodwill', 'propertyPlantEquipment', 'retainedEarnings', 'netIncomeFromContinuingOperations', 'shortTermInvestments', 'netIncome', 'ebit', 'operatingExpenses', 'totalNonCurrentAssets', 'costOfRevenue', 'totalAssets', 'cashAndShortTermInvestments', 'otherNonOperatingIncome', 'cashAndCashEquivalentsAtCarryingValue', 'totalCurrentLiabilities', 'researchAndDevelopment', 'longTermDebt', 'netInterestIncome', 'interestAndDebtExpense', 'comprehensiveIncomeNetOfTax', 'deferredRevenue', 'otherCurrentLiabilities', 'currentDebt', 'interestExpense', 'shortTermDebt', 'longTermInvestments', 'totalRevenue', 'reportedCurrency', 'fiscalDateEnding', 'currentLongTermDebt', 'commonStockSharesOutstanding', 'operatingIncome', 'currentAccountsPayable', 'incomeTaxExpense', 'depreciationAndAmortization', 'totalCurrentAssets', 'totalLiabilities', 'otherCurrentAssets', 'longTermDebtNoncurrent', 'investments', 'sellingGeneralAndAdministrative', 'investmentIncomeNet', 'nonInterestIncome', 'accumulatedDepreciationAmortizationPPE', 'currentNetReceivables', 'capitalLeaseObligations', 'totalNonCurrentLiabilities', 'commonStock', 'intangibleAssetsExcludingGoodwill', 'otherNonCurrentLiabilities', 'inventory', 'depreciation', 'otherNonCurrrentAssets'}\n"
+      "{'researchAndDevelopment', 'operatingExpenses', 'fiscalDateEnding', 'accumulatedDepreciationAmortizationPPE', 'shortTermInvestments', 'commonStockSharesOutstanding', 'inventory', 'totalCurrentLiabilities', 'totalRevenue', 'totalShareholderEquity', 'totalNonCurrentAssets', 'grossProfit', 'shortTermDebt', 'currentDebt', 'incomeTaxExpense', 'currentLongTermDebt', 'otherCurrentLiabilities', 'propertyPlantEquipment', 'nonInterestIncome', 'investments', 'totalNonCurrentLiabilities', 'longTermInvestments', 'ebitda', 'netInterestIncome', 'deferredRevenue', 'incomeBeforeTax', 'cashAndCashEquivalentsAtCarryingValue', 'longTermDebtNoncurrent', 'ebit', 'intangibleAssetsExcludingGoodwill', 'cashAndShortTermInvestments', 'reportedCurrency', 'costofGoodsAndServicesSold', 'otherNonOperatingIncome', 'otherCurrentAssets', 'interestIncome', 'otherNonCurrrentAssets', 'capitalLeaseObligations', 'goodwill', 'commonStock', 'depreciationAndAmortization', 'depreciation', 'sellingGeneralAndAdministrative', 'costOfRevenue', 'netIncome', 'otherNonCurrentLiabilities', 'operatingIncome', 'comprehensiveIncomeNetOfTax', 'totalLiabilities', 'longTermDebt', 'treasuryStock', 'interestExpense', 'netIncomeFromContinuingOperations', 'totalCurrentAssets', 'interestAndDebtExpense', 'shortLongTermDebtTotal', 'currentNetReceivables', 'intangibleAssets', 'totalAssets', 'investmentIncomeNet', 'retainedEarnings', 'currentAccountsPayable'}\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -95,20 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "ratios = [\n",
     "    # ['pe', [], []], \n",
     "    # ['eps', [], []],\n",
-    "    ['de', ['totalLiabilities'], ['totalShareHolderEquity']], \n",
+    "    # ['de', ['totalLiabilities'], ['totalShareHolderEquity']], \n",
     "    ['da', ['totalLiabilities'], ['totalAssets']],\n",
-    "    ['roe', ['netincome'], ['totalShareHolderEquity']],\n",
+    "    # ['roe', ['netincome'], ['totalShareHolderEquity']],\n",
     "    ['roa', ['netincome'], ['totalAssets']],\n",
     "    ['net_profit_margin', ['netincome'], ['totalrevenue']],\n",
-    "    ['current_ratio', ['totalCurrentAssets'], ['totalCurrentLiabilities']],\n",
-    "    ['quick_ratio', ['totalcurrentassets', '-inventory'], ['totalcurrentliabilities']],\n",
+    "    # ['current_ratio', ['totalCurrentAssets'], ['totalCurrentLiabilities']],\n",
+    "    # ['quick_ratio', ['totalcurrentassets', '-inventory'], ['totalcurrentliabilities']],\n",
     "    ['asset_turnover', ['totalrevenue'], ['totalAssets']],\n",
     "    ['debt_ratio', ['totalliabilities'], ['totalassets']],\n",
     "]"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,44 +169,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "180\n",
-      "177\n",
-      "192\n",
-      "221\n",
-      "192\n",
-      "192\n",
-      "201\n",
-      "228\n",
-      "202\n",
-      "203\n",
-      "207\n",
-      "223\n",
-      "201\n",
-      "202\n",
-      "205\n",
-      "216\n",
-      "185\n",
-      "181\n",
-      "190\n",
-      "206\n",
-      "{'MMM', 'ABT', 'AMZN', 'AWK', 'AOS', 'ALK', 'ATVI', 'ADP', 'AME', 'ACN', 'ABMD'}\n"
+      "471 476 479 471 478 482 483 488 \n",
+      "428 {'PEAK', 'LYB', 'EQR', 'CTAS', 'VNO', 'FRT', 'EXPE', 'CMG', 'CTRA', 'UNH', 'TGT', 'MET', 'L', 'SYY', 'GM', 'SNPS', 'AVB', 'PNW', 'NVR', 'AEE', 'NWS', 'PEG', 'STZ', 'TDG', 'GPC', 'ABC', 'RSG', 'ALGN', 'GWW', 'LOW', 'CNP', 'ANTM', 'IT', 'XRAY', 'IR', 'UA', 'TTWO', 'WDC', 'FTV', 'RJF', 'FDS', 'ODFL', 'CVS', 'DAL', 'NDSN', 'NDAQ', 'DFS', 'LRCX', 'CF', 'AIG', 'MPWR', 'ROP', 'WRB', 'CHRW', 'REGN', 'CBRE', 'ROST', 'LLY', 'IEX', 'PKG', 'NKE', 'JBHT', 'OGN', 'WAT', 'KMB', 'PTC', 'CMCSA', 'NLSN', 'NOW', 'EMN', 'SBUX', 'QCOM', 'SYF', 'PCAR', 'MMM', 'NSC', 'ESS', 'DRE', 'MTB', 'GPN', 'PPL', 'SBNY', 'MS', 'NEM', 'MA', 'WBA', 'AJG', 'FFIV', 'STT', 'FAST', 'ABT', 'CBOE', 'USB', 'ALLE', 'FBHS', 'BK', 'BRO', 'GL', 'XEL', 'COF', 'GE', 'CSCO', 'TDY', 'WTW', 'MPC', 'AMT', 'HII', 'D', 'NTAP', 'WFC', 'HPE', 'WHR', 'PHM', 'ITW', 'DGX', 'LEN', 'ROL', 'TECH', 'LYV', 'TRV', 'CEG', 'POOL', 'HLT', 'DVA', 'F', 'MMC', 'URI', 'GLW', 'AAL', 'PEP', 'MCD', 'MNST', 'TYL', 'NLOK', 'UNP', 'SCHW', 'HAL', 'PGR', 'ZBRA', 'COST', 'ICE', 'ILMN', 'AMZN', 'LW', 'KEYS', 'TPR', 'ARE', 'WYNN', 'AON', 'CARR', 'IBM', 'DLR', 'QRVO', 'DVN', 'HD', 'COO', 'EW', 'NTRS', 'OMC', 'ALB', 'VRSN', 'CSX', 'IRM', 'TSLA', 'LDOS', 'OKE', 'BA', 'VMC', 'PPG', 'SNA', 'SHW', 'BKR', 'VFC', 'APTV', 'VLO', 'AMD', 'CAT', 'JCI', 'AWK', 'BIIB', 'RE', 'FMC', 'SYK', 'MRO', 'CDNS', 'WMT', 'LNT', 'K', 'HUM', 'ALL', 'ADBE', 'KR', 'BSX', 'TJX', 'KIM', 'AOS', 'DHI', 'XOM', 'PXD', 'PFE', 'J', 'IQV', 'UHS', 'MKTX', 'HON', 'SBAC', 'GNRC', 'MDLZ', 'PLD', 'DHR', 'EFX', 'MOS', 'INTU', 'JNJ', 'CDW', 'AMP', 'NFLX', 'IFF', 'LVS', 'GOOG', 'KMI', 'UAA', 'NEE', 'CPRT', 'APH', 'KLAC', 'O', 'CCL', 'MAS', 'PVH', 'HSIC', 'JNPR', 'ORCL', 'CFG', 'IPG', 'UAL', 'MTCH', 'FLT', 'PFG', 'HST', 'NWSA', 'DISCA', 'ALK', 'MSCI', 'INTC', 'SEDG', 'TMUS', 'CTSH', 'CAG', 'IP', 'EA', 'AKAM', 'PNR', 'NI', 'PNC', 'SPGI', 'CRM', 'SO', 'RTX', 'ATVI', 'WRK', 'FIS', 'TRMB', 'GD', 'BAX', 'EXR', 'TT', 'EPAM', 'ADM', 'FDX', 'PBCT', 'MLM', 'NCLH', 'ADP', 'FANG', 'MRK', 'KMX', 'CMS', 'AIZ', 'CE', 'IPGP', 'XYL', 'PWR', 'VTR', 'AME', 'SRE', 'MDT', 'GRMN', 'ORLY', 'SLB', 'EIX', 'HES', 'ETR', 'DXCM', 'YUM', 'CRL', 'BLK', 'ACN', 'LUMN', 'CB', 'EOG', 'EXPD', 'CHD', 'RHI', 'ABMD', 'T', 'GS', 'BKNG', 'PSA', 'MO', 'SJM', 'IVZ', 'WMB', 'APA', 'MGM', 'PKI', 'AFL', 'TSCO', 'ETN', 'DOV', 'JKHY', 'WAB', 'INFO', 'LHX', 'ANSS', 'PYPL', 'KEY', 'MAR', 'PRU', 'RCL', 'EMR', 'CNC', 'PAYX', 'C', 'FB', 'BAC', 'HBAN', 'ANET', 'LIN', 'SWKS', 'CZR', 'ETSY', 'DE', 'SIVB', 'BDX', 'HSY', 'LH', 'RF', 'CTLT', 'AMAT', 'PG', 'GOOGL', 'PM', 'MSI', 'KO', 'EBAY', 'UDR', 'FTNT', 'IDXX', 'ISRG', 'DTE', 'VRSK', 'CMA', 'FISV', 'HAS', 'TWTR', 'CAH', 'AAPL', 'CHTR', 'WM', 'NUE', 'COP', 'MKC', 'EL', 'NOC', 'AXP', 'ADSK', 'ECL', 'CTXS', 'EQIX', 'AEP', 'PSX', 'UPS', 'BXP', 'ATO', 'JPM', 'LMT', 'MCO', 'OTIS', 'HCA', 'AES', 'FE', 'ENPH', 'CVX', 'MCHP', 'CMI', 'MTD', 'SPG', 'CL', 'BIO', 'MAA', 'MU', 'PENN', 'HIG', 'PAYC', 'STX', 'BWA', 'REG', 'TFC', 'PH', 'ABBV', 'RL', 'TEL', 'TMO', 'GIS', 'CCI', 'NWL', 'DRI', 'AMGN', 'AZO', 'FITB', 'GILD', 'MCK', 'BLL', 'RMD', 'WEC', 'CLX', 'APD'}\n",
+      "69 {'DXC', 'WY', 'ZBH', 'ZTS', 'AVY', 'TER', 'CME', 'DOW', 'BBWI', 'VZ', 'SEE', 'FOXA', 'HWM', 'SWK', 'CI', 'WELL', 'MHK', 'DIS', 'HOLX', 'TROW', 'DD', 'MSFT', 'AAP', 'TFX', 'KHC', 'CINF', 'CTVA', 'EXC', 'FCX', 'HPQ', 'NRG', 'V', 'TXT', 'DISH', 'HRL', 'VTRS', 'FOX', 'BMY', 'BR', 'LUV', 'TSN', 'WST', 'CDAY', 'DPZ', 'VRTX', 'MRNA', 'DISCK', 'ES', 'ED', 'A', 'CERN', 'NVDA', 'AMCR', 'OXY', 'TAP', 'NXPI', 'ROK', 'DUK', 'LKQ', 'BEN', 'STE', 'FRC', 'LNC', 'EVRG', 'ADI', 'INCY', 'TXN', 'ZION', 'BBY'}\n"
      ]
     }
    ],
    "source": [
     "tickerset = set(ticker)\n",
-    "for year in range(2017, 2022):\n",
+    "badtickerset = set()\n",
+    "year_start = 2017\n",
+    "year_end = 2019\n",
+    "for year in range(year_start, year_end):\n",
     "    for qtr in range(1, 5):\n",
     "        period = f'{year}_Q{qtr}'\n",
     "        period_file = open(f'../data/QuarterlyRatios/{period}.csv', 'r')\n",
+    "        header = period_file.readline()\n",
     "        lines = period_file.readlines()\n",
+    "        period_file.close()\n",
     "        cool = 0\n",
     "        for line in lines:\n",
     "            ok = True\n",
@@ -218,10 +205,34 @@
     "            if not ok:\n",
     "                if tickerset.__contains__(line[0]):\n",
     "                    tickerset.remove(line[0])\n",
-    "            else: \n",
+    "                badtickerset.add(line[0])\n",
+    "            else:\n",
     "                cool += 1\n",
-    "        print(cool)\n",
-    "print(tickerset)"
+    "        print(cool,end=' ')\n",
+    "print()\n",
+    "print(len(tickerset), tickerset)\n",
+    "print(len(badtickerset), badtickerset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in range(year_start, year_end):\n",
+    "    for qtr in range(1, 5):\n",
+    "        period = f'{year}_Q{qtr}'\n",
+    "        period_file = open(f'../data/QuarterlyRatios/{period}.csv', 'r')\n",
+    "        header = period_file.readline()\n",
+    "        lines = period_file.readlines()\n",
+    "        period_file.close()\n",
+    "        period_file = open(f'../data/QuarterlyRatiosClean/{period}.csv', 'w')\n",
+    "        period_file.write(header)\n",
+    "        for line in lines:\n",
+    "            line = line.strip().split(',')\n",
+    "            if tickerset.__contains__(line[0]):\n",
+    "                period_file.write(line[0] + ',' + ','.join(line[1:]) + '\\n')"
    ]
   },
   {
